# tinyc.games

./: .clang-tidy  .gitignore  CMakeLists.txt  CNAME  LICENSE  Makefile  README-BLOCKO-OLD.md  README.md  _config.yml  bird-block.xcf  bird-layers.xcf  blocko.saves  compile-mac.sh  flappy.c  index.html  index.md  main.c  params.json  run-linux.sh  run-mac.sh  run-windows.bat  tet.c
.github/workflows/: build.yml
_mac/SDL2_image.framework/Versions/A/: SDL2_image
_mac/SDL2_net.framework/Versions/A/: SDL2_net
_mac/SDL2_ttf.framework/Versions/A/: SDL2_ttf
_osn/: open-simplex-noise.c
_win/SDL2_ttf-2.0.14/: Makefile
_win/SDL2_ttf-2.0.14/x86_64-w64-mingw32/lib/: libSDL2_ttf.la
_win/tcc-x64/include/: dos.h  stdarg.h  stdint.h  string.h
_win/tcc-x64/include/sec_api/: crtdbg_s.h  stdio_s.h  string_s.h  tchar_s.h
_win/tcc-x64/include/sys/: file.h  stat.h  time.h
_win/tcc-x64/include/winapi/: pshpack1.h  pshpack2.h  windef.h
_win/tcc-x64/lib/: SDL2.def
_win/tcc-x86/doc/: tcc-doc.html
_win/tcc-x86/include/: _mingw.h  assert.h  ctype.h  dirent.h  errno.h  fcntl.h  fenv.h  inttypes.h  locale.h  mem.h  memory.h  stddef.h  tcclib.h  vadefs.h
_win/tcc-x86/include/sec_api/: conio_s.h  io_s.h  mbstring_s.h  stdlib_s.h
_win/tcc-x86/include/sys/: fcntl.h  timeb.h  types.h  utime.h
_win/tcc-x86/include/winapi/: guiddef.h  reason.h  specstrings.h  stralign.h  wincon.h  winnt.h  winuser.h  winver.h
_win/tcc-x86/lib/: msvcrt.def
_win/tcc-x86/libtcc/: libtcc.def
_win/tcc/examples/: libtcc_test.c
_win/tcc/include/: tchar.h  varargs.h
_win/tcc/include/winapi/: intrin.h  winbase.h  winreg.h
blocko/: Makefile  README.md  UNFINISHED  \  atmosphere.c  blocko.c  blocko.h  collision.c  draw.c  dumb_rand_test.c  font.c  gcc-O1.sh  gcc-O2.sh  gcc-O3.sh  glsetup.c  interface.c  light.c  main.c  matrix.c  perlin.c  player.c  run-linux.sh  run-mac.sh  run-windows.bat  shader.c  sky.c  tags  terrain.c  test.c  timer.c  timer.h  vector.h
blocko-game/: Makefile  atmosphere.c  blocklight.c  blockmodel.c  blocko.c  blocko.h  chunker.c  collision.c  console.c  cursor.c  defs.c  draw.c  edit.c  font.c  formations.c  gen_knobs.h  glsetup.c  hand.c  interface.c  item.c  light.c  main.c  mesh.c  mine.c  mob.c  model-history-plan.md  net.c  patch.c  piece-resize-plan.md  piece-types-plan.md  player.c  pmedit.c  pmodel.c  remote.c  rest-angle-plan.md  run-linux.sh  run-mac.sh  run-windows.bat  shadow.c  simarea-plan.md  (+9 more)
blocko-game/assets/models/: player-bloc-croc.model  player-buster-bo.model  player-default.model
blocko-game/plans/: chunk-optimization.md
blocko-game/pmedit/: draw2d.c  emit.c  glyphs.c  input.c  layout.c  palette.c  picker.c  piece.c  raycast.c  render.c  state.c  ui.c  undo.c
blocko-game/shaders/: block_geom.glsl  cursor.frag  cursor.vert  font.frag  font_vk.frag  main.frag  main.geom  main.vert  main_simple.frag  main_simple.geom  main_simple.vert  mob.vert  mob_shadow.vert  moon.frag  moon.vert  pmodel.vert  pmodel_shadow.vert  pmui.frag  pmui.vert  shadow.frag  shadow.geom  shadow.vert  shadow_solid.frag  sky.frag  sky.vert  sky_color.glsl  sun.frag  sun.vert  triangle.geom  triangle.vert
blocko-game/tools/: README.md  bk
blocko-game/vs2019-blocko/: vs2019-blocko.vcxproj
blocko/shaders/: font.vert  main.frag  sun.frag  sun.vert
blocko/vs2019-blocko/: vs2019-blocko.sln  vs2019-blocko.vcxproj  vs2019-blocko.vcxproj.filters
common/: build-config.h.in
common/tinyc.games/: audio.c  audio.h  audio_defs.c  font.c  ledge_config.c  taylor_noise.c  terrain.c  terrain_config.c  terrain_knobs.h  timer.c  utils.c  warp_config.c
common/tinyc.games/shaders/: font.frag  font.vert
common/tinyc.games/vulkan/: CMakeLists.txt  README  buffer.c  command.c  depth.c  descriptor.c  device.c  frame.c  image.c  instance.c  main.c  physical.c  pipeline.c  queue.c  shader.c  surface.c  synchronization.c  texture.c
common/tinyc.games/vulkan/assets/: tinyc-icon.xcf
common/tinyc.games/vulkan/shaders/: triangle.frag  triangle.geom
common/vulkan/: CMakeLists.txt  LICENSE  command.c  frame.c  instance.c  main.c  present.c  queue.c  shader.c  surface.c  synchronization.c
common/windows/tcc-x64/doc/: tcc-win32.txt
flappy/: flappy.c  run-linux.sh  run-mac.sh  run-windows.bat
flappy-game/: flappy.c  run-linux.sh  run-mac.sh  run-windows.bat
flappy/res/: organ-block.xcf  organ-layers.xcf
maker/: UNFINISHED  maker.c  run-linux.sh  run-mac.sh  run-windows.bat
maker-game/: maker.c  run-mac.sh  run-windows.bat
noise-demo/: noise_demo.c  run-linux.sh  timer.c
noise-demo/shaders/: noise.vert
oilchange/: .glsetup.c.swp  README.md  atmosphere.c  bin  collision.c  draw.c  font.c  glsetup.c  interface.c  light.c  main.c  player.c  run-mac.sh  terrain.c  test.c  vector.h
oilchange/res/: mushlite.xcf
oilchange/shaders/: main.vert  shadow.geom
oilchange/vs2019-oilchange/: vs2019-blocko.sln  vs2019-blocko.vcxproj
stylesheets/: stylesheet.css
taylor-noise/: noise.c  run-linux.sh  timer.c
taylor-noise/shaders/: main.frag
tet/: $MYVIMRC  audio.c  run-linux.sh  run-mac.sh  run-windows.bat  tet.c  todo
tet-game/: audio.c  defs.c  graphics.c  input.c  music.c  run-linux.sh  run-mac.sh  run-windows.bat  tet.c  tet.h  timer.c  todo
tet-game/shaders/: main.vert  tet.frag  tet.vert
valet/: UNFINISHED  run-linux.sh  run-mac.sh  run-windows.bat  valet.c
valet-game/: valet.c
valet-game/assets/: background.xcf
win/tcc/examples/: fib.c
win/tcc/include/: dir.h  direct.h  process.h  setjmp.h  share.h  signal.h  stdlib.h  time.h  wchar.h  wctype.h
win/tcc/lib/: kernel32.def
win/tcc/libtcc/: libtcc.h
zel/: Makefile  box-drawing  draw.c  enemies.c  enemy_board.c  enemy_screw.c  enemy_toolbox.c  enemy_wrench.c  level_data.c  odnar.c  ow_gen.c  player.c  run-linux.sh  run-mac.sh  run-windows.bat  todo  zel.c
zel-game/: draw.c  enemies.c  enemy_board.c  enemy_pig.c  enemy_puff.c  enemy_screw.c  enemy_toolbox.c  enemy_wrench.c  level_data.c  ow_gen.c  player.c  run-linux.sh  run-mac.sh  run-windows.bat  zel.c
zel-game/assets/: room.xcf
zel/res/: room.xcf
(+38 files in other folders)
